@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Support of JPEG and JPEG-LS decompression
+* Download DICOM images as Matlab/Octave arrays
 * Precompiled headers for Microsoft Visual Studio
 
 
